# sabry

./: .gitignore  Cargo.toml  LICENSE  README.md  release.toml
.github/workflows/: cbt.yml
examples/define-styles/: Cargo.toml
examples/define-styles/src/: lib.rs  style.scss
examples/leptos-axum/: Cargo.toml  README.md
examples/leptos-axum/src/: lib.rs  main.rs  shell.rs
examples/leptos-axum/src/routes/: home.rs  home.scss
examples/leptos-axum/styles/: app.scss
examples/leptos-components/: Cargo.toml  build.rs
examples/leptos-components/src/: lib.rs
examples/use-styles/: Cargo.toml  build.rs
examples/use-styles/assets/: prelude.css
examples/use-styles/src/: main.rs  main.sass
sabry_build/: Cargo.toml  README.md
sabry_build/src/: buildmagic.rs  filevisit.rs  lib.rs
sabry_intrnl/: Cargo.toml  README.md
sabry_intrnl/src/: lib.rs
sabry_intrnl/src/compiler/: mod.rs
sabry_intrnl/src/config/: manifest.rs  mod.rs
sabry_intrnl/src/scoper/: hash.rs  mod.rs
sabry_intrnl/src/syntax/: mod.rs  ostrta.rs
sabry_procmacro/: Cargo.toml  README.md
sabry_procmacro/src/: lib.rs
sabry_procmacro/tests/: macros.rs  samicro.sass  scmicro.scss
sabry_procmacro_impl/: Cargo.toml  README.md
sabry_procmacro_impl/src/: lib.rs
sabry_procmacro_impl/src/impls/: mod.rs  sassy.rs  scssy.rs  styly.rs  usey.rs
src/: lib.rs
tests/: macros.rs  styly_global.rs  styly_module_usage.rs  styly_repeating_selector.rs  styly_sole_code.rs  styly_use_forwarded.rs
tests/assets/: global.scss  mixin-module.sass  mixin-module.scss  mixins.sass  mixins.scss  module-forward.sass  module-forward.scss  module-usage.sass  module-usage.scss  prelude.css  prelude.sass  prelude.scss  repeating-selector.sass  repeating-selector.scss  sole-code.sass  sole-code.scss  use-forwarded.sass  use-forwarded.scss
tests/sabry_output_snapshots/: compilation_with_buildy@bundle.css.snap  compilation_with_buildy@bundle.css.snap.new  compilation_with_buildy@scopes__global_scss.css.snap  compilation_with_buildy@scopes__global_scss.css.snap.new  compilation_with_buildy@scopes__module_usage_sass.css.snap  compilation_with_buildy@scopes__module_usage_scss.css.snap  compilation_with_buildy@scopes__repeating_selector_sass.css.snap  compilation_with_buildy@scopes__repeating_selector_scss.css.snap  compilation_with_buildy@scopes__sole_code_sass.css.snap  compilation_with_buildy@scopes__sole_code_scss.css.snap  compilation_with_buildy@scopes__use_forwarded_sass.css.snap  compilation_with_buildy@scopes__use_forwarded_scss.css.snap
