[workspace]
resolver = "2"
members = [
    "sabry_procmacro",
    "sabry_procmacro_impl",
    "sabry_intrnl",
]
exclude = [
    "examples"
]

[workspace.dependencies]
sabry_intrnl = {path = "sabry_intrnl", version = "0.0.1-alpha.2" }
sabry_procmacro = {path = "sabry_procmacro", version = "0.0.1-alpha.2" }
sabry_procmacro_impl = {path = "sabry_procmacro_impl", version = "0.0.1-alpha.2" }
sabry_build = {path = "sabry_build", version = "0.0.1-alpha.2" }

[workspace.package]
version = "0.0.1-alpha.2"
edition = "2021"
rust-version = "1.82"
authors = ["Svyatoslav Pushkarev <yiffyrusdev@yandex.ru>"]
repository = "https://github.com/yiffyrusdev/sabry"
license = "MIT"
publish = true

[package]
name = "sabry"
description = "Syntactically Awesome But RustY - crate that brings SCSS/SASS into rust."
keywords = ["web", "sass", "scss", "macro"]
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
sabry_procmacro = {workspace = true, optional = true}
sabry_build = {workspace = true, optional = true}
sabry_intrnl = {workspace = true}

[features]
default = ["procmacro"]
lepty-scoping = [
    "sabry_intrnl/lepty-scoping"
]
procmacro = [
    "dep:sabry_procmacro"
]
build = [
    "dep:sabry_build"
]
net-files = [
    "sabry_build/net-files"
]
