[package]
name = "sabry_build"
description = "Sabry build magic as a separate crate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sabry_intrnl = {workspace = true}
sabry_procmacro_impl = {workspace = true}
proc-macro2 = {workspace = true, features = ["span-locations"]}
syn = {workspace = true, features = ["visit", "derive", "parsing", "full"]}
thiserror = {workspace = true}

walkdir = {version = "^2.5"}

[features]
sass = [
    "sabry_procmacro_impl/sass",
    "sabry_intrnl/sass"
]
scss = [
    "sabry_procmacro_impl/scss",
    "sabry_intrnl/scss"
]
net-files = []
