[package]
name = "sabry_build"
description = "Sabry build magic as a separate crate"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sabry_intrnl = {workspace = true}
sabry_procmacro_impl = {workspace = true}

syn = {version = "^2.0", features = ["visit", "derive", "parsing", "full"]}
proc-macro2 = {version = "^1.0", features = ["span-locations"]}
thiserror = {version = "^1.0"}
walkdir = {version = "^2.5"}

[features]
net-files = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
