[package]
name = "sabry_build"
description = "Sabry build magic as a separate crate"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sabry_intrnl = { workspace = true }
sabry_procmacro_impl = { workspace = true }

syn = { version = "^2", features = ["visit", "derive", "parsing", "full"] }
proc-macro2 = { version = "^1", features = ["span-locations"] }
thiserror = { version = "^2" }
walkdir = { version = "^2" }

[features]
net-files = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
