[package]
name = "sabry_intrnl"
description = "Sabry internal, yet still public library"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syn = {version = "^2.0"}
quote = {version = "^1.0"}
proc-macro2 = {version = "^1.0"}
raffia = {version = "^0.9"}
regex = {version = "^1.11"}
grass = {version = "^0.13"}
lightningcss = {version = "1.0.0-alpha.59"}
blake3 = {version = "^1.5"}
base64 = {version = "^0.22"}

thiserror = {version = "^1.0"}
serde = {version = "^1.0", features = ["derive"]}
toml = {version = "^0.8"}
cfg-if = {version = "^1.0"}

[features]
lepty-scoping = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
