[package]
name = "sabry_intrnl"
description = "Sabry internal, yet still public library"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
syn = { version = "^2" }
raffia = { version = "^0.9" }
regex = { version = "^1" }
grass = { version = "^0.13" }
lightningcss = { version = "1.0.0-alpha.65" }
blake3 = { version = "^1.5" }
base64 = { version = "^0.22" }

thiserror = { version = "^2" }
serde = { version = "^1", features = ["derive"] }
toml = { version = "^0.8" }
cfg-if = { version = "^1" }

[features]
lepty-scoping = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
