[package]
name = "sabry_procmacro"
description = "Sabry proc-macro declarations"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
sabry_procmacro_impl = {workspace = true}
cfg-if = {version = "^1.0"}

[features]
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
