[package]
name = "sabry_procmacro_impl"
description = "Sabry proc-macro internals reusable outside of proc-macro context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sabry_intrnl = {workspace = true}

proc-macro2 = {workspace = true, features = ["span-locations"]}
syn = {workspace = true, features = ["parsing"]}
quote = {workspace = true}
regex = {workspace = true}

raffia = {workspace = true}

[features]
sass = [
    "sabry_intrnl/sass"
]
scss = [
    "sabry_intrnl/scss"
]
