[package]
name = "sabry_procmacro_impl"
description = "Sabry proc-macro internals reusable outside of proc-macro context"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sabry_intrnl = {workspace = true}

syn = {version = "^2.0", features = ["parsing"]}
quote = {version = "^1.0"}
proc-macro2 = {version = "^1.0", features = ["span-locations"]}
raffia = {version = "^0.9"}
regex = {version = "^1.11"}
itertools = {version = "^0.13"}

[features]
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
