[package]
name = "sabry_procmacro_impl"
description = "Sabry proc-macro internals reusable outside of proc-macro context"
version.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sabry_intrnl = { workspace = true }

syn = { version = "^2", features = ["parsing"] }
quote = { version = "^1" }
proc-macro2 = { version = "^1", features = ["span-locations"] }
regex = { version = "^1" }
itertools = { version = "^0.14" }

[features]
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
